fix: LinkedIn URL

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           Find me on
           <a
             class="link-2 light"
-            href="https://www.linkedin.com/in/chrisf91/">LinkedIn</a> or
+            href="https://www.linkedin.com/in/at-cf/">LinkedIn</a> or
           <a
             class="link-2 light"
             href="https://github.com/at-cf">GitHub</a>.
