fix: sync with LI

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
           <!-- TEXTS TO BE TYPED -->
           <span id="typed"></span>
           <div id="typed-strings">
-            <p>Angular & UX</p>
+            <p>Angular + UX</p>
             <p>serverless AWS</p>
-            <p>quantitative Python</p>
+            <p>Python + ML</p>
           </div>
           <!-- TEXTS TO BE TYPED -->
-          <br />in NYC.
+          <br />around NYC.
         </h1>
         <!-- TITLE -->
         <!-- DESCRIPTION -->
