--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
       <!-- CONTENT -->
       <div class="content">
         <!-- TITLE -->
-        <h1>
-          Hi, I do
-          <br />
-          <!-- TEXTS TO BE TYPED -->
-          <span id="typed"></span>
-          <div id="typed-strings">
-            <p>Angular + UX</p>
-            <p>serverless AWS</p>
-            <p>Python + ML</p>
-          </div>
-          <!-- TEXTS TO BE TYPED -->
-          <br />around NYC.
-        </h1>
+        <!-- <h1> -->
+        <!--   Hi, I do -->
+        <!--   <br /> -->
+        <!--   <!-1- TEXTS TO BE TYPED -1-> -->
+        <!--   <span id="typed"></span> -->
+        <!--   <div id="typed-strings"> -->
+        <!--     <p>Angular + UX</p> -->
+        <!--     <p>Python + ML</p> -->
+        <!--     <p>AWS</p> -->
+        <!--   </div> -->
+        <!--   <!-1- TEXTS TO BE TYPED -1-> -->
+        <!--   <br />around NYC. -->
+        <!-- </h1> -->
         <!-- TITLE -->
         <!-- DESCRIPTION -->
         <!-- <p></p> -->
