--- a/index.html
+++ b/index.html
@@ -6,54 +6,24 @@
     <meta name="author" content="at-cf" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>@cf</title>
-    <!-- FAV and TOUCH ICONS -->
     <link rel="shortcut icon" href="images/ico/favicon.ico" />
     <link rel="apple-touch-icon" href="images/ico/apple-touch-icon.png" />
-    <!-- FONTS -->
-    <link rel="stylesheet" type="text/css" href="css/fonts/hk-grotesk/style.css" />
-    <link rel="stylesheet" type="text/css" href="css/fonts/fontello/css/fontello.css" />
-    <!-- STYLES -->
-    <link rel="stylesheet" type="text/css" href="css/main.min.css" />
+    <style>
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      font-family: sans-serif;
+    }
+    span.peace {
+      color: green;
+    }
+    </style>
   </head>
-  <body class="is-text-align-center is-masked-dark is-text-light">
-    <!-- BG IMAGE / VIDEO -->
-    <div class="media" style="background-image: url(images/background-optimized.jpg);"></div>
-    <!-- CONTENT-WRAP -->
-    <div class="content-wrap">
-      <!-- CONTENT -->
-      <div class="content">
-        <!-- TITLE -->
-        <!-- <h1> -->
-        <!--   Hi, I do -->
-        <!--   <br /> -->
-        <!--   <!-1- TEXTS TO BE TYPED -1-> -->
-        <!--   <span id="typed"></span> -->
-        <!--   <div id="typed-strings"> -->
-        <!--     <p>Angular + UX</p> -->
-        <!--     <p>Python + ML</p> -->
-        <!--     <p>AWS</p> -->
-        <!--   </div> -->
-        <!--   <!-1- TEXTS TO BE TYPED -1-> -->
-        <!--   <br />around NYC. -->
-        <!-- </h1> -->
-        <!-- TITLE -->
-        <!-- DESCRIPTION -->
-        <!-- <p></p> -->
-        <p>
-          Find me on
-          <a
-            class="link-2 light"
-            href="https://www.linkedin.com/in/at-cf/">LinkedIn</a> or
-          <a
-            class="link-2 light"
-            href="https://github.com/at-cf">GitHub</a>.
-        </p>
-        <!-- DESCRIPTION -->
-      </div>
-      <!-- CONTENT -->
+  <body>
+    <div>
+      Find me on <a href="https://www.linkedin.com/in/at-cf/">LinkedIn</a> or <a href="https://github.com/at-cf">GitHub</a>. <span class="peace">&#9774;</span>
     </div>
-    <!-- CONTENT-WRAP -->
-    <!-- SCRIPTS -->
-    <script src="js/main.js"></script>
   </body>
 </html>
