feat: link to resume

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div>
-      Find me on <a href="https://www.linkedin.com/in/at-cf/">LinkedIn</a> or <a href="https://github.com/at-cf">GitHub</a>. <span class="peace">&#9774;</span>
+      Check out my <a href="https://www.linkedin.com/in/at-cf/">LinkedIn</a>, <a href="https://github.com/at-cf">GitHub</a>, or <a href="https://registry.jsonresume.org/at-cf">Resume</a>. <span class="peace">&#9774;</span>
     </div>
   </body>
 </html>
